<resources>
    <string name="app_name">Express Services</string>
    <string name="tv_registrar_usuario">Registrar Usuario</string>
    <string name="txt_email">Correo</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_nombre">Nombre(s)</string>
    <string name="txt_confirm_pass">Confirmar Contraseña</string>
    <string name="text_ayuda">*Campo Obligatorio*</string>
    <string name="btn_iniciar">Iniciar</string>
    <string name="btn_registrar">Registrar</string>
    <string name="btn_crear">Crear Cuenta</string>
    <string name="title_activity_principal">Principal_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="tv_olvide_mi_contraseña">Recuperar Contraseña?</string>
    <string name="tv_recuperar_pass">Recuperacion de Contraseña</string>
    <string name="btn_solicitar_correo">Enviar Correo</string>
    <string name="tv_email">correo@android.com</string>
    <string name="tv_usuario">Usuario</string>
    <string name="tv_servicios">Seleciona Algun Servicio</string>
    <string name="btn_buscar">Buscar</string>
    <string name="tv_nosotros">¿Quienes Somos?</string>
    <string name="texto">Somos una empresa pequeña que lo que ofrecemos es
    brindar una mejora para la socieda sobre el servicio que la mayoria de
    las personas ocupan en su tiempo ya sea que se les termino el gas o estas
    en la autopista lejos de una gasolinera y con nosotros y nuestra aplicacion
    te brindaremos la facilidad de solicitar el servicio y en donde quiera que
    te encuentres al proveedor de gasolina con tu ubicacion sera mas facil llevarte
    la gasolina para que puedas seguir con tu viaje como ya lo mencionamos somos una
    empresa pequeña pero con el objetivo de crecer</string>
    <string name="tv_puedes">Puedes Contactarnos Atra vez de..</string>
    <string name="tv_correo">Correo: </string>
    <string name="tv_telefono">Telefono: </string>
    <string name="tv_direccion_correo">expressservice@gmail.com</string>
    <string name="tv_num_telefono">6675967545</string>
    <string name="btn_solicitar_servicio">Solicitar Servicio</string>
    <string name="tv_gas_menu">Gas</string>
    <string name="tv_gasolina_menu">Gasolina</string>
    <string name="tv_grua_menu">Grua</string>
    <string name="tv_guia_user">Guia de Uso</string>
    <string name="menu_datos">Datos</string>
    <string name="menu_configuracion">Configuracion</string>
    <string name="menu_acerca_de">Acerca de Nosotros</string>


    <string name="action_settings">Settings</string>
    <string name="txt_id_usuario">ID Usuario</string>


    <string name="nav_eliminar_cuenta">Eliminar Cuenta</string>
    <string name="btn_grua">Servicio de Gruas</string>
    <string name="nav_gasolina">Servicio de Gasolina</string>
    <string name="nav_gas">Servicio de Gas</string>

    <string name="menu_home">Datos</string>
    <string name="menu_gallery">Configuracion</string>
    <string name="menu_slideshow">Acerca de Nosotros</string>
    <string name="menu_cerrar_sesion">Cerrar Sesion</string>
    <string name="title_activity_mapa_google">Mapa_Google</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>