<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_login"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btn_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/verde"
        android:drawableLeft="@drawable/ic_iniciar_login"
        android:text="@string/btn_iniciar"
        android:textSize="24sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Recuperar_Pass" />

    <Button
        android:id="@+id/btn_Registrarme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:drawableLeft="@drawable/ic_registrer_login"
        android:text="@string/btn_registrar"
        android:textSize="24sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_Correo_Login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/txt_email"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/verde"
        app:boxStrokeErrorColor="@color/design_default_color_error"
        app:counterOverflowTextColor="@color/design_default_color_error"
        app:errorIconTint="@color/design_default_color_error"
        app:errorTextColor="@color/design_default_color_error"
        app:helperText="@string/text_ayuda"
        app:helperTextTextColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_email_login"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_Password_Login1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/txt_password"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/verde"
        app:boxStrokeErrorColor="@color/design_default_color_error"
        app:counterOverflowTextColor="@color/design_default_color_error"
        app:endIconMode="password_toggle"
        app:errorIconTint="@color/design_default_color_error"
        app:errorTextColor="@color/design_default_color_error"
        app:helperText="@string/text_ayuda"
        app:helperTextTextColor="@color/white"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Correo_Login"
        app:passwordToggleDrawable="@drawable/ic_ocultar"
        app:startIconDrawable="@drawable/ic_pass_login"
        app:startIconTint="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_Recuperar_Pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="150dp"
        android:text="@string/tv_olvide_mi_contraseña"
        android:textColor="@color/blue2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Password_Login1" />
</androidx.constraintlayout.widget.ConstraintLayout>