<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Datos"
    android:background="@drawable/fondo_2">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imv_foto_perfil"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_person">

        </ImageView>

        <TextView
            android:id="@+id/tv_Correo_Perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toEndOf="@id/imv_foto_perfil"
            android:layout_toRightOf="@id/imv_foto_perfil"
            android:text="@string/txt_email"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>

    </RelativeLayout>

    <Button
        android:id="@+id/button_Cerrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue"
        android:drawableLeft="@drawable/ic_cerra_de_sesion"
        android:text="@string/menu_cerrar_sesion"
        android:textSize="13sp"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <Button
        android:id="@+id/button_Elliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/rojo"
        android:drawableLeft="@drawable/ic_eliminar_cuenta"
        android:text="@string/nav_eliminar_cuenta"
        android:textSize="13sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_Cerrar"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>